--- a/web-start/index.html
+++ b/web-start/index.html
@@ -111,6 +111,21 @@
 <!-- ***********************************************************************************************************************
      * TODO(DEVELOPER): Paste the initialization snippet from: Firebase Console > Overview > Add Firebase to your web app. *
      *********************************************************************************************************************** -->
+     
+
+
+<script src="https://www.gstatic.com/firebasejs/live/3.0/firebase.js"></script>
+<script>
+  // Initialize Firebase
+  var config = {
+    apiKey: "AIzaSyDpc5beBoKvVgz4EcMQ8b9BnE7gb8TP15o",
+    authDomain: "friendlychat-50f2e.firebaseapp.com",
+    databaseURL: "https://friendlychat-50f2e.firebaseio.com",
+    storageBucket: "friendlychat-50f2e.appspot.com",
+  };
+  firebase.initializeApp(config);
+</script>
+     
 <script src="scripts/main.js"></script>
 </body>
 </html>
